# main

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  proxy.ts  skills-lock.json
agents/: .env.example  README.md  orchestrator.py  pyproject.toml  state.py
agents/analysts/: fundamental.py  sentiment.py  technical.py
agents/llm/: factory.py
agents/memory/: trace.py
agents/portfolio/: agent.py
agents/risk/: agent.py
agents/synthesis/: agent.py
backend/: .env.example  Dockerfile  README.md  inngest_client.py  main.py  pyproject.toml
backend/agents/: README.md  __init__.py  graph.py  orchestrator.py  philosophy.py  state.py
backend/api/: dependencies.py
backend/backtesting/: metrics.py  runner.py  simulator.py
backend/boundary/: controller.py  modes.py
backend/broker/: alpaca.py  base.py  factory.py
backend/db/: supabase.py
backend/inngest_functions/: __init__.py  backtest.py
backend/scheduler/: runner.py
backend/scripts/: cancel_all_running.py
backend/services/: backtest_service.py  broker_service.py  experiment_service.py  notification_service.py  pipeline_service.py  portfolio_service.py  profile_service.py  signals_service.py  supabase_client.py  trade_service.py  watchlist_service.py
backend/tests/: test_admin_routes.py  test_auth_middleware.py  test_backtest_routes.py  test_backtest_service.py  test_cancel_and_log.py  test_market_as_of_date.py  test_market_news.py  test_metrics.py  test_notification_service.py  test_philosophy.py  test_portfolio_routes.py  test_portfolio_service.py  test_profile_route.py  test_profile_service.py  test_protected_routes.py  test_rbac.py  test_reject_signal_route.py  (+8 more)
(+338 files in other folders)
